<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120sp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iVPoster"
        android:layout_width="80sp"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:layout_margin="10sp"
        tools:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tVMovieName"
        android:contentDescription="@string/movie_poster" />
    
    <TextView
        android:id="@+id/tVMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/movie_name_textsize"
        android:textStyle="bold"
        android:layout_marginStart="15sp"
        app:layout_constraintStart_toEndOf="@id/iVPoster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tVMovieYear"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/movie_text_sample"/>
    <TextView
        android:id="@+id/tVMovieYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/movie_year_genres_textsize"
        android:layout_marginStart="15sp"
        android:layout_marginTop="5sp"
        app:layout_constraintStart_toEndOf="@id/iVPoster"
        app:layout_constraintEnd_toStartOf="@id/tVMovieGenres"
        app:layout_constraintTop_toBottomOf="@id/tVMovieName"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/movie_year_sample"/>
    <TextView
        android:id="@+id/tVMovieGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/movie_year_genres_textsize"
        android:layout_marginStart="15sp"
        app:layout_constraintStart_toEndOf="@id/tVMovieYear"
        app:layout_constraintTop_toTopOf="@id/tVMovieYear"
        app:layout_constraintBottom_toBottomOf="@id/tVMovieYear"
        tools:text="@string/movie_genres_sample"/>


</androidx.constraintlayout.widget.ConstraintLayout>